# perspective-projection

./: CMakeLists.txt  README.md  bsp_tree.cpp  bsp_tree.hpp  camera.cpp  camera.hpp  keyboard_controls.hpp  main.cpp  obj_file_parser.cpp  obj_file_parser.hpp  polygon.cpp  polygon.hpp  polygon_projection.cpp  scene.cpp
src/: CMakeLists.txt  bsp_tree.cpp  bsp_tree.hpp  camera.cpp  keyboard_controls.cpp  keyboard_controls.hpp  main.cpp  mouse_controls.cpp  mouse_controls.hpp  obj_file_parser.cpp  obj_file_parser.hpp  object.cpp  object.hpp  polygon.cpp  polygon.hpp  polygon_projection.hpp  scene.cpp  scene.hpp  vec.cpp  vec.hpp
